--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -10,6 +10,10 @@
     }
     .contact-form .form-control {
         padding: 15px;
+        font-size: 16px;
+    }
+    .contac-submit-btn {
+        font-size: 16px;
     }
     
     #footer .social-list {
